--- a/aptos-move/move-examples/defi/locked_coins/Move.toml
+++ b/aptos-move/move-examples/defi/locked_coins/Move.toml
@@ -6,4 +6,4 @@ version = "0.0.0"
 defi = "_"
 
 [dependencies]
-AptosFramework = { local = "../../framework/aptos-framework" }
+AptosFramework = { local = "../../../framework/aptos-framework" }
