--- a/aptos-move/move-examples/fungible_asset/Move.toml
+++ b/aptos-move/move-examples/fungible_asset/Move.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 
 [addresses]
 aptos_framework = "0x1"
-fungible_asset_extension = "_"
+example_addr = "_"
 
 [dependencies]
 AptosFramework = { local = "../../framework/aptos-framework" }
