[fa example] multisig managed coin

--- a/ecosystem/typescript/sdk/examples/typescript/package.json
+++ b/ecosystem/typescript/sdk/examples/typescript/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "bcs_transaction": "ts-node bcs_transaction.ts",
     "multisig_account": "ts-node multisig_account.ts",
+    "multisig_managed_coin": "ts-node multisig_managed_coin.ts",
     "multisig_transaction": "ts-node multisig_transaction.ts",
     "simple_nft": "ts-node simple_nft.ts",
     "transfer_coin": "ts-node transfer_coin.ts",
