--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "zx": "^7.1.1"
+  },
+  "dependencies": {
+    "aptos": "^1.9.1"
   }
 }
