--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,9 @@ members = [
     "consensus/consensus-types",
     "consensus/safety-rules",
     "crates/aptos",
+    "crates/aptos-api/entrypoint",
+    "crates/aptos-api/v1",
+    "crates/aptos-api/v2",
     "crates/aptos-bitvec",
     "crates/aptos-build-info",
     "crates/aptos-compression",
@@ -243,6 +246,9 @@ rust-version = "1.64"
 aptos = { path = "crates/aptos" }
 aptos-accumulator = { path = "storage/accumulator" }
 aptos-aggregator = { path = "aptos-move/aptos-aggregator" }
+aptos-api-entrypoint = { path = "crates/aptos-api/entrypoint" }
+aptos-api-v1 = { path = "crates/aptos-api/v1" }
+aptos-api-v2 = { path = "crates/aptos-api/v2" }
 aptos-api = { path = "api" }
 aptos-api-test-context = { path = "api/test-context" }
 aptos-api-types = { path = "api/types" }
@@ -391,7 +397,7 @@ assert_approx_eq = "1.1.0"
 assert_unordered = "0.1.1"
 async-stream = "0.3"
 async-trait = "0.1.53"
-axum = "0.5.16"
+axum = "0.6.11"
 base64 = "0.13.0"
 backoff = { version = "0.4.0", features = ["tokio"] }
 backtrace = "0.3.58"
@@ -506,8 +512,9 @@ prometheus-http-query = "0.5.2"
 prometheus-parse = "0.2.4"
 proptest = "1.0.0"
 proptest-derive = "0.3.0"
-prost = "0.11.3"
-prost-types = "0.10.1"
+prost = "0.11.8"
+prost-types = "0.11.8"
+reverse-proxy-service = "0.1.2"
 quanta = "0.10.1"
 quote = "1.0.18"
 rand = "0.7.3"
