--- a/Cargo.toml
+++ b/Cargo.toml
@@ -299,6 +299,9 @@ aptos-indexer-grpc-parser = { path = "ecosystem/indexer-grpc/indexer-grpc-parser
 aptos-infallible = { path = "crates/aptos-infallible" }
 aptos-inspection-service = { path = "crates/inspection-service" }
 aptos-jellyfish-merkle = { path = "storage/jellyfish-merkle" }
+dotenv = "0.15.0"
+num_enum = "0.5.6"
+uuid = { version = "1.0.0", features = ["v4", "serde"] }
 aptos-keygen = { path = "crates/aptos-keygen" }
 aptos-language-e2e-tests = { path = "aptos-move/e2e-tests" }
 aptos-log-derive = { path = "crates/aptos-log-derive" }
@@ -576,7 +579,6 @@ ureq = { version = "1.5.4", features = [
     "native-tls",
 ], default_features = false }
 url = { version = "2.2.2", features = ["serde"] }
-uuid = { version = "1.0.0", features = ["v4", "serde"] }
 walkdir = "2.3.2"
 warp = { version = "0.3.3", features = ["tls"] }
 warp-reverse-proxy = "0.5.0"
